SFDCProject/src/objects/Asset__c.object
<CustomObject>
    <fields>
        <fullName>Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset__c</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Collar_Serial_Num2__c</fullName>
        <label>Collar Serial Num2</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collar_Serial_Num__c</fullName>
        <label>Collar Serial Num</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>External_Source__c</fullName>
        <label>External Source</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_id__c</fullName>
        <externalId>true</externalId>
        <label>External id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manufacturer__c</fullName>
        <label>Manufacturer</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meter_Price__c</fullName>
        <formula>CASE(1, 

IF(AND( ServiceContract__r.Install_Partner__c = &quot;Sungevity&quot;, DATEVALUE(ServiceContract__r.Proposal__r.CreatedDate) &gt;= DATE(2015,04,14), 
ISBLANK(ServiceContract__r.Proposal__r.Original_Proposal_ID__c)),1,0), 244, 

IF(AND( ServiceContract__r.Install_Partner__c = &quot;Sungevity&quot;,DATEVALUE(ServiceContract__r.Proposal__r.CreatedDate) &lt; DATE(2015,04,14), 
ISBLANK(ServiceContract__r.Proposal__r.Original_Proposal_ID__c)),1,0), 0, 

IF(AND( ServiceContract__r.Install_Partner__c = &quot;Sungevity&quot;, DATEVALUE(ServiceContract__r.Proposal__r.Original_Proposal_ID__r.CreatedDate) &gt;= DATE(2015,04,14)),1,0), 244, 

IF(AND(DATEVALUE(ServiceContract__r.Proposal__r.CreatedDate) &gt;= DATE(2015,04,01),
ISBLANK(ServiceContract__r.Proposal__r.Original_Proposal_ID__c)),1,0), 244, 

IF(AND(DATEVALUE(ServiceContract__r.Proposal__r.CreatedDate) &lt; DATE(2015,04,01),
ISBLANK(ServiceContract__r.Proposal__r.Original_Proposal_ID__c)),1,0), 0,

IF(DATEVALUE(ServiceContract__r.Proposal__r.Original_Proposal_ID__r.CreatedDate) &gt;= DATE(2015,04,01),1,0), 244, 0)</formula>
        <label>Meter Price In EPC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Meter_Type__c</fullName>
        <label>Meter Type</label>
        <picklist>
            <picklistValues>
                <fullName>SS iTRon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SS Elster</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SS GE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Locus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metrum AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UMD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT&amp;T</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monitoring_Site_ID__c</fullName>
        <label>Monitoring Site ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Meters__c</fullName>
        <inlineHelpText>Number of meters sent for the installation</inlineHelpText>
        <label>Number of Meters</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Sunrun_Owned_Modules__c</fullName>
        <label>Number of Sunrun-Owned Panels</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Original_System_Size_CEC_AC__c</fullName>
        <label>Original System Size CEC AC</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Panel_Serial_Number__c</fullName>
        <label>Panel Serial Number</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RedeployedFrom__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Redeployed From</label>
        <referenceTo>ServiceContract</referenceTo>
        <relationshipLabel>Assets (Service Contract)</relationshipLabel>
        <relationshipName>RedeployedFrom</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RedeployedTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Redeployed To</label>
        <referenceTo>ServiceContract</referenceTo>
        <relationshipLabel>Assets (Service Contract)</relationshipLabel>
        <relationshipName>RedeployedTo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SSI_Code__c</fullName>
        <label>SSI Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <label>Serial Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceContract__c</fullName>
        <label>ServiceContract</label>
        <referenceTo>ServiceContract</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Service_Contract_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Contract Event</label>
        <referenceTo>Service_Contract_Event__c</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Site_ID_Registration_Date__c</fullName>
        <label>Site ID Registration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>System_Size_CEC_AC__c</fullName>
        <label>System Size CEC AC</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>System_Size_DC__c</fullName>
        <label>System Size DC</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Test__c</fullName>
        <label>Test</label>
        <summaryForeignKey>Asset_Activity__c.Asset__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Asset</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inverter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Panel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microinverter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy Storage System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monitoring Service</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unique_Asset__c</fullName>
        <formula>IF(AND(ISPICKVAL(Status__c,&apos;Active&apos;),ISPICKVAL(Type__c,&apos;Meter&apos;), Serial_Number__c!=null),TEXT( Type__c )+ TEXT( Meter_Type__c ) +  Serial_Number__c + TEXT( Status__c ),&apos;&apos;)</formula>
        <label>Unique Asset</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <label>Vendor</label>
        <picklist>
            <picklistValues>
                <fullName>ABB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enphase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Locus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SolarEdge</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Asset</label>
    <nameField>
        <displayFormat>A{00000000}</displayFormat>
        <label>Asset Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assets</pluralLabel>
    <recordTypes>
        <fullName>Asset</fullName>
        <active>true</active>
        <label>Asset</label>
    </recordTypes>
    <recordTypes>
        <fullName>Energy_Storage_System</fullName>
        <active>true</active>
        <description>battery, controller, ect</description>
        <label>Energy Storage System</label>
    </recordTypes>
    <recordTypes>
        <fullName>Inverter</fullName>
        <active>true</active>
        <label>Inverter</label>
    </recordTypes>
    <recordTypes>
        <fullName>Meter</fullName>
        <active>true</active>
        <label>Meter</label>
    </recordTypes>
    <recordTypes>
        <fullName>Microinverter</fullName>
        <active>true</active>
        <label>Microinverter</label>
    </recordTypes>
    <recordTypes>
        <fullName>Monitoring_Service</fullName>
        <active>true</active>
        <label>Monitoring Service</label>
    </recordTypes>
    <recordTypes>
        <fullName>Panel</fullName>
        <active>true</active>
        <label>Panel</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Type_and_record_type_of_Meter_Asset</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$User.Id &lt;&gt; &apos;005600000046gQE&apos;,
$User.Id &lt;&gt; &apos;005600000046gQ4&apos;,
$User.Id &lt;&gt; &apos;00560000003KtpG&apos;,
$User.Id &lt;&gt; &apos;00560000002G4QB&apos;,
$User.Id &lt;&gt; &apos;00560000001Pfen&apos;,
$Profile.Name &lt;&gt; &apos;System Administrator&apos;,
OR( 
AND( 
ISPICKVAL(Type__c, &apos;Meter&apos;), 
RecordType.Name != &apos;Meter&apos; 
),
AND( 
NOT(ISPICKVAL(Type__c, &apos;Meter&apos;)), 
RecordType.Name = &apos;Meter&apos; 
) 
)
)</errorConditionFormula>
        <errorMessage>Meter asset should have Type and Record Type BOTH set as Meter</errorMessage>
    </validationRules>
</CustomObject>